<resources>
    <string name="app_name">Mayo</string>
    <string name="google_maps_key">AIzaSyCzo4xHtqFTCvq52ASTIKcvyADwwo4BB8s</string>
    <string name="notsupported">Google map not supported in your device</string>
    <string name="cantgetlocation">Can\'t get current location</string>
    <string name="open_location_settings">Please enable Location.</string>
    <string name="givelocationpermission">Please give location permission.</string>
    <string name="tip_message_one">TIP:</string>
    <string name="tip_message_one_new"> Mayo works best if you choose </string>
    <string name="tip_message_one_new2">  \"Always share location\".</string>
    <string name="tip_message_two">We value your privacy and batter life so \'Always\' simply allows us to periodically locate nearby
        help quests even if you forget to open the app :)</string>
    <string name="got_it">Got it</string>
    <string name="location_disable_message">Oh oh! We need your help with location to help us help you. You can enable location for Mayo in Settings</string>
    <string name="not_now">Not now</string>
    <string name="settings">Settings</string>
    <string name="help_message">What do you need help with?</string>
    <string name="ai_message">So our AI is a bit bored, help us by sending a message!</string>
    <string name="helping_message">Helping people around you is simple. Swipe the cards or look around the map.</string>
    <string name="need_help">Need help? Swipe to the very left to setup a help quest.</string>
    <string name="expired_card">Expired Card</string>
    <string name="can_help">I can help</string>
    <string name="count">This is for count check.</string>
    <string name="my_location">My Location</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="points_message">Your mayo points can be exchanged for rewards in the</string>
    <string name="you_have">You have</string>
    <string name="remove_score_view">Remove Score View</string>
    <string name="show_gif_image">This is for showing gif image</string>
    <string name="post">Post</string>
    <string name="expire_msg">Automatically expires in 1 hr or if you leave the area</string>
    <string name="ai_chat_thanks_message">Thanks for the help! Do you want to be notified when you get a response back?</string>
    <string name="sure_message">Sure</string>
    <string name="wooho">Wooho thank you!</string>
    <string name="send_message">Send</string>
    <string name="new_message">New Message</string>
    <string name="quest_done">Mark quest as done</string>
    <string name="cancel">Cancel</string>
    <string name="who_helped">Who helped you out?</string>
    <string name="say_thanks">Say thanks and pay it</string>
    <string name="thanks">Thanks!</string>
    <string name="no_one_helped">No one helped me</string>
    <string name="quest_completed">Quest has Completed</string>
    <string name="no_internet_connection">Oops can\'t connect to the Internet.</string>
    <string name="ok">OK</string>


    <!--Tutorial Strings-->
    <string name="tutorial1">We all need a little help sometimes in person.</string>
    <string name="tutorial2">Lets\'s bring the world closer together &amp; lend a hand to those beside us.</string>
    <string name="tutorial3">Now help us figure out where you are so you can help others &amp; collect Mayo points!</string>
    <string name="tutorial4">We won\'t share your location unless the app is open infront of you.</string>
    <string name="button_text_tutorial_one">Right</string>
    <string name="button_text_tutorial_second">Oh yeah!</string>
    <string name="button_text_tutorial_third">Alright!</string>
    <string name="button_text_tutorial_fourth">OK let\'s go!</string>
    <string name="first_tutorial_screen">first</string>
    <string name="second_tutorial_screen">second</string>
    <string name="third_tutorial_screen">third</string>
    <string name="fourth_tutorial_screen">fourth</string>
    <string name="rotateimage">Rotate image in image view</string>
    <string name="zero">0</string>


    <!--Task  Messages-->
    <string name="STATUS_FOR_THANKED">Owner marked as done and the people all thanked for</string>
    <string name="STATUS_FOR_NOT_HELPED">Owner marked as done and no one helped</string>
    <string name="STATUS_FOR_TIME_EXPIRED">Expired due to time limit</string>
    <string name="STATUS_FOR_MOVING_OUT">Expired due to moving out of area</string>

    <!--Notification message-->
    <string name="notification_expired_message">Your help quest expired</string>
    <string name="notification_help_message">Still need help?</string>
    <string name="notification_new_quest_available">New quest available</string>
    <string name="notification_nearby">Someone has a new quest nearby</string>
    <string name="notification_posted_message">New Message Posted</string>
    <string name="notification_someone">Someone posted in</string>
    <string name="out_of_range">You\'re out of range so the quest ended :(</string>
    <string name="post_again">Post again if you still need help.</string>
    <string name="quest_looking_completed">The quest you\'re looking for has completed</string>
    <string name="quest_expire_soon">Your help quest expiring soon.</string>
    <string name="helped_soon">Quests inactive for 1 hour automatically expires. Hope you get helped soon!</string>

    <!--GeoFences Details-->
    <string name="geofence_not_available">Geofencing Not Available</string>
    <string name="geofence_too_many_geofences">Geofence has too many geofences</string>
    <string name="geofence_too_many_pending_intents">Geofences too many pending intent</string>
    <string name="unknown_geofence_error">Geofence Unknown error</string>
    <string name="geofences_added">GeoFence added successfully</string>

</resources>
