<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_20"
    android:background="@drawable/background_white"
    android:orientation="vertical"
    android:padding="@dimen/padding_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/tip_message_one"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/tx_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginStart="@dimen/margin_5"
                android:text="@string/tip_message_one_new"
                android:textColor="@color/colorLightBlue"
                android:textSize="@dimen/tx_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:text="@string/tip_message_one_new2"
                android:textColor="@color/colorLightBlue"
                android:textSize="@dimen/tx_16" />


        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/open_location_settings"
        android:src="@drawable/location_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/tip_message_two"
        android:textColor="@color/colorLightBlue"
        android:textSize="@dimen/tx_16" />

    <Button
        android:id="@+id/gotitbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/button_background_two"
        android:text="@string/got_it"
        android:textAllCaps="false"
        android:textColor="@color/colorLightBlue"
        android:textSize="@dimen/tx_18" />

</LinearLayout>