<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backgroundview"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_200"
    android:layout_margin="@dimen/margin_20"
    android:background="@drawable/background_score_view"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.8"
            android:text="@string/points_message"
            android:textColor="@color/white"
            android:textSize="@dimen/tx_18" />

        <ImageButton
            android:id="@+id/delete_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@drawable/clear"
            android:contentDescription="@string/remove_score_view" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/you_have"
        android:textColor="@color/white"
        android:textSize="@dimen/tx_26" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="@dimen/tx_26" />

</RelativeLayout>