<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeMapLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.mayo.activities.MapActivity">


    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:apiKey="@string/google_maps_key"
        android:enabled="true" />

    <LinearLayout
        android:layout_width="@dimen/width_80"
        android:layout_height="@dimen/width_80"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_40">

        <Button
            android:id="@+id/countbutton"
            android:layout_width="@dimen/width_80"
            android:layout_height="@dimen/height_80"
            android:background="@drawable/background_oval"
            android:contentDescription="@string/count"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="@dimen/tx_22" />
    </LinearLayout>

    <ImageView
        android:id="@+id/rotateImageOnMapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/scale_210"
        android:layout_marginTop="@dimen/scale_240"
        android:contentDescription="@string/rotateimage"
        android:scaleType="centerCrop"
        android:src="@drawable/flare_rotation"
        android:textColor="@color/white"
        android:textSize="@dimen/tx_20"
        android:visibility="gone" />


    <com.mayo.viewclasses.CustomViewPager
        android:id="@+id/viewPagerMapView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_300"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_350"
        android:layout_alignParentBottom="true">

        <com.cunoraz.gifview.library.GifView
            android:id="@+id/imageHandsViewOnMapScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/show_gif_image"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>
