<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_20"
    android:background="@drawable/background_white"
    android:orientation="vertical"
    android:padding="@dimen/padding_20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ai_chat_thanks_message"
        android:textColor="@color/colorLightBlue"
        android:textSize="@dimen/tx_16" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/notNowChatbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_weight="1"
            android:background="@drawable/button_background_two"
            android:text="@string/not_now"
            android:textAllCaps="false"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/tx_18" />

        <Button
            android:id="@+id/sureChatButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_weight="1"
            android:background="@drawable/button_background_two"
            android:text="@string/sure_message"
            android:textAllCaps="false"
            android:textColor="@color/colorLightBlue"
            android:textSize="@dimen/tx_18" />

    </LinearLayout>
</LinearLayout>