<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapcardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_280"
    android:background="@android:drawable/dialog_holo_light_frame"
    app:cardCornerRadius="@dimen/rd_4"
    app:cardElevation="@dimen/el_30">

    <RelativeLayout
        android:id="@+id/backgroundmapviewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_tutorial_one"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_16"
        android:paddingRight="@dimen/padding_16"
        android:paddingTop="@dimen/padding_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/parentButton"
            android:orientation="vertical">


            <EditText
                android:id="@+id/postEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="top"
                android:hint="@string/help_message"
                android:inputType="textMultiLine"
                android:maxLength="81"
                android:textColor="@color/white"
                android:textColorHint="#99FFFFFF"
                android:textSize="@dimen/tx_20" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:focusable="true"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timeshownmaincard"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/parentimagebutton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imagebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/clear"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <Button
                android:id="@+id/textbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/post"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/tx_18"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/parentImagesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timeshownmaincard"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/messageIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_chat"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/doneButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/doneIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_done"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>

        <com.github.curioustechizen.ago.RelativeTimeTextView
            android:id="@+id/timeshownmaincard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/expire_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/tx_10"
            android:visibility="invisible" />
    </RelativeLayout>
</android.support.v7.widget.CardView>

